trying to figure out bug where on mobile, the RUSH and EVENTS page header has a different font size

--- a/css/index.css
+++ b/css/index.css
@@ -215,9 +215,8 @@ p{
     margin: 15px;
     border-radius: 5px;
     background-color: white;
-}
-.event:hover{
-    background-color: #F7302F;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 .event img.enlarge {
     display: none;
@@ -226,6 +225,33 @@ p{
     top: 0;
     left: -50%;
 }
+.event:hover{
+    background-color: #F7302F;
+    -webkit-transform: scale(1.25, 1.25);
+    transform: scale(1.25, 1.25);
+    z-index: 10;
+}
+.event::after {
+    content: "";
+    border-radius: 5px;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.event:hover::after {
+    opacity: 1;
+}
+
+
+
 /*
 .event:hover img.enlarge{
     display: block;
